yamaha-youth/assets/css/navbar.css
.nav-bar {
  box-sizing: border-box;
  -moz-box-sizing: border-box;
  -webkit-box-sizing: border-box;
  max-width: 1100px;
  background-color: rgb(255, 255, 255, 0.3);
  border-radius: 30px;
  backdrop-filter: blur(24px);
  -webkit-backdrop-filter: blur(24px);
  border: solid 1px #d1d5db;
  top: 10px;
}

.navbar-nav a {
  font-weight: 500;
}

.nav-item {
  display: flex;
  align-items: center;
  justify-content: center;
  transition: all 0.2s ease;
}

#nav-bar .nav-item a {
  color: #274d6e;
}
.nav-item a {
  border-radius: 50rem;
}
.nav-link.active,
.nav-link:hover {
  background-color: rgb(255, 255, 255, 0.3);
}

.hamburger {
  display: none;
  cursor: pointer;
  border: solid 1px #e5e7eb;
  padding: 8px;
  width: 42px;
  height: 42px;
}

.bar {
  display: block;
  width: 25px;
  height: 1.5px;
  margin: 5px auto;
  -webkit-transition: all 0.3s ease-in-out;
  transition: all 0.3s ease-in-out;
  background-color: #1f2937;
}

.dropdown-toggle::after {
  content: none;
}

.dropdown-menu {
  width: 250px;
}
.account-name {
  overflow: hidden;
  text-overflow: ellipsis;
}

.dropdown-menu[data-bs-popper] {
  width: auto;
  top: 200%;
  background-color: rgb(255, 255, 255, 0.8);
  backdrop-filter: blur(24px);
  border-radius: 20px;
  border: solid 1px #d1d5db;
}
.auth-nav .dropdown-menu[data-bs-popper] {
  left: -150px;
  background-color: rgb(255, 255, 255, 0.3);
  backdrop-filter: blur(24px);
  border-radius: 20px;
  border: solid 1px #d1d5db;
  top: 125%;
}

.dropdown-item {
  color: #274d6e;
  padding: 0.75rem 1rem;
}
.auth-button {
  color: white;
  padding: 8px 20px;
  border-radius: 20px;
}
.logout-button {
  background-color: #d33f44;
  top: 125%;
}
.login-button {
  background-color: #274d6e;
}

@media (max-width: 992px) {
  .navbar-brand img{
    width: 100%;
    max-width: 80px;
  }
  .navbar-toggler[aria-expanded="true"] .bar:nth-child(2) {
    opacity: 0;
  }
  .navbar-toggler[aria-expanded="true"] .bar:nth-child(1) {
    transform: translate(0, 8px) rotate(45deg);
  }
  .navbar-toggler[aria-expanded="true"] .bar:nth-child(3) {
    transform: translate(0, -5px) rotate(-45deg);
  }

  .hamburger {
    display: block;
  }

  .nav-item a {
    display: flex;
    justify-content: center;
  }

  .login-button {
    width: 100%;
  }

  .dropdown {
    display: flex;
    flex-direction: column;
  }
  .account-desc {
    display: block !important;
  }

  .dropdown-menu {
    width: 100%;
    position: relative;
    background-color: rgb(255, 255, 255, 0.3);
    border-radius: 20px;
    border: solid 1px #d1d5db;
  }

  .dropdown-menu[data-bs-popper] {
    background-color: rgb(255, 255, 255, 0.1);
    width: 100%;
  }
}

